--- a/bin/cpp/main/Build.xml
+++ b/bin/cpp/main/Build.xml
@@ -96,6 +96,10 @@
   <file name="src/haxe/Utf8.cpp" >
    <depend name="include/haxe/Utf8.h"/>
   </file>
+  <file name="src/haxe/Log.cpp" >
+   <depend name="include/Std.h"/>
+   <depend name="include/haxe/Log.h"/>
+  </file>
   <file name="src/haxe/IMap.cpp" >
    <depend name="include/haxe/IMap.h"/>
   </file>
@@ -117,6 +121,7 @@
    <depend name="include/Sys.h"/>
    <depend name="include/app/App.h"/>
    <depend name="include/app/model/DependencyModel.h"/>
+   <depend name="include/haxe/Log.h"/>
    <depend name="include/haxe/io/Bytes.h"/>
    <depend name="include/haxe/io/Input.h"/>
    <depend name="include/sys/io/Process.h"/>
@@ -157,6 +162,7 @@
   <file name="src/__boot__.cpp" >
    <depend name="include/haxe/io/Error.h"/>
    <depend name="include/ValueType.h"/>
+   <depend name="include/haxe/Log.h"/>
    <depend name="include/StringTools.h"/>
   </file>
   <file name="src/__files__.cpp" if='HXCPP_DEBUGGER'>
