--- a/bin/cpp/main/Build.xml
+++ b/bin/cpp/main/Build.xml
@@ -28,6 +28,13 @@
    <depend name="include/haxe/io/Output.h"/>
    <depend name="include/sys/io/FileOutput.h"/>
   </file>
+  <file name="src/sys/io/FileInput.cpp" >
+   <depend name="include/haxe/io/Bytes.h"/>
+   <depend name="include/haxe/io/Eof.h"/>
+   <depend name="include/haxe/io/Error.h"/>
+   <depend name="include/haxe/io/Input.h"/>
+   <depend name="include/sys/io/FileInput.h"/>
+  </file>
   <file name="src/sys/io/File.cpp" >
    <depend name="include/haxe/io/Output.h"/>
    <depend name="include/sys/io/File.h"/>
@@ -116,6 +123,7 @@
    <depend name="include/sys/io/Process.h"/>
   </file>
   <file name="src/app/App.cpp" >
+   <depend name="include/EReg.h"/>
    <depend name="include/Std.h"/>
    <depend name="include/StringTools.h"/>
    <depend name="include/Sys.h"/>
@@ -136,6 +144,8 @@
   <file name="src/Sys.cpp" >
    <depend name="include/StringTools.h"/>
    <depend name="include/Sys.h"/>
+   <depend name="include/haxe/io/Input.h"/>
+   <depend name="include/sys/io/FileInput.h"/>
   </file>
   <file name="src/StringTools.cpp" >
    <depend name="include/EReg.h"/>
